SERVER-8535 Added exception logic to filesystem::exists call

Many of our calls to boost::filesystem::exists() do not treat it
as a function that throws exceptions. Adding logic to catch these
can stop various obscure permissions-related problems.

Signed-off-by: Matt Kangas <matt.kangas@mongodb.com>